# raindrop-enhancer

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  architecture.md  main.py  pyproject.toml  raindrop.db  raindrop_documentation.md
.gemini/commands/: generate_architecture_diagram.toml  generate_architecture_document.toml
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.tmp_test_data/: config.toml
docs/: feature-test-results.md  manual-testing.md
scripts/perf/: benchmark_sync.py
source_docs/: raindrop_documentation.md  trafilatura_documentation.md  yt-dlp_snippet.md
specs/001-build-a-small/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-an-application/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-storage-and-sync/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-add-trafilatura-add/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-handle-youtube-videos/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-add-llm-tagging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-unify-cli-commands/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/raindrop_enhancer/: __init__.py  cli.py  models.py  tagging.py
tests/: conftest.py
tests/contract/: test_cli_content_capture.py  test_cli_contract.py  test_cli_help.py  test_cli_json_outputs.py  test_cli_missing_prereqs.py  test_cli_tags_generate.py  test_raindrop_api_contracts.py  test_raindrop_endpoints.py  test_raindrop_incremental_contract.py
tests/fixtures/: content_links.json
tests/integration/: test_cli_content_capture.py  test_cli_content_capture_integration.py  test_cli_export.py  test_cli_sync.py  test_cli_tags_generate_integration.py  test_full_sync.py  test_incremental_sync.py  (+2 more)
tmp/: raindrops.db
(+69 files in other folders)
