[project]
name = "raindrop-enhancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "gracy>=1.34.0",
    "rich>=14.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "trafilatura>=0.11.0",
    "yt-dlp>=2024.4.0",
    "dspy>=3.0.3",
]

[project.optional-dependencies]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.23.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
raindrop-export = "raindrop_enhancer.cli:main"
raindrop-sync = "raindrop_enhancer.cli:sync"
capture-content = "raindrop_enhancer.cli:capture_content"
raindrop-migrate = "raindrop_enhancer.cli:migrate"
raindrop-tags = "raindrop_enhancer.cli:tags"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
